<resources>
    <string name="app_name">My Application</string>
    <string name="video_description">TITLE AND DESCRIPTION</string>
    <string name="btnLike">LIKE</string>
    <string name="btnShare">SHARE</string>
    <string name="ChannelInfo">Channel</string>
    <string name="SubcribeNum">1000 subscribers</string>
    <string name="Subscribe">SUBSCRIBE</string>
    <string name="Subscribed">SUBSCRIBED</string>
    <string name="cmtWarningEmpty">Content must not be empty</string>

    <string name="button_Go">Go</string>
</resources>